--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build --outDir build",
+    "build": "vite build --outDir build  --base=/capstone-frontend/",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
+    
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
